--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.2",
-    "expo": "~51.0.28",
+    "expo": "^51.0.32",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-easy-grid": "^0.2.2"
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-input-spinner": "^1.8.1",
+    "react-native-paper": "^5.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
