--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.5.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "expo": "^51.0.32",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
